# IFT3700_ProjetNHL

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  venv_setup.md
Visualisation/: __init__.py  dataset.py  features.py  plots.py
Visualisation/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
