[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Visualisation"
version = "0.0.1"
description = "NHL data driven model"
authors = [
  { name = "Alexis Archambault Xavier Drolet Hung Nguyen Cao" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["Visualisation"]
include = ["pyproject.toml", "Visualisation/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Visualisation"]
force-sort-within-sections = true

